--- a/flask/MedNosis/Dockerfile
+++ b/flask/MedNosis/Dockerfile
@@ -1,34 +1,16 @@
-FROM python:3.9.2-alpine
+FROM python:3.9
 
-# upgrade pip
-RUN pip install --upgrade pip
+RUN mkdir /app/
+WORKDIR /app/
 
-# get curl for healthchecks
-RUN apk add curl
+COPY src /app/src/
+COPY etc /app/etc/
 
-# permissions and nonroot user for tightened security
-RUN adduser -D nonroot
-RUN mkdir /home/app/ && chown -R nonroot:nonroot /home/app
-RUN mkdir -p /var/log/flask-app && touch /var/log/flask-app/flask-app.err.log && touch /var/log/flask-app/flask-app.out.log
-RUN chown -R nonroot:nonroot /var/log/flask-app
-WORKDIR /home/app
-USER nonroot
+ENV PYTHONPATH=${PYTHONPATH}:${PWD}
 
-# copy all the files to the container
-COPY --chown=nonroot:nonroot . .
+RUN python3 -m venv .venv
+COPY docker-entrypoint.sh /usr/bin/
 
-# venv
-ENV VIRTUAL_ENV=/home/app/venv
+ENTRYPOINT ["/usr/bin/docker-entrypoint.sh"]
 
-# python setup
-RUN python -m venv $VIRTUAL_ENV
-RUN /home/app/venv/bin/python -m pip install --upgrade pip
-ENV PATH="$VIRTUAL_ENV/bin:$PATH"
-RUN export FLASK_APP=app.py
-RUN pip install -r etc/requirements.txt
 
-# define the port number the container should expose
-EXPOSE 5000
-
-CMD ["cd", "src"]
-CMD ["python", "app.py"]
